--- a/1/1.md
+++ b/1/1.md
@@ -1,4 +1,4 @@
-# 1.透過參與CTF搶旗大賽學習資安實務	[YOUYUBE錄影](https://youtu.be/65ssViH3rd0)
+# 1.透過參與CTF搶旗大賽學習資安實務	
 
 ## CTF(Capture The Flag)搶旗大賽
 - [令人感動一定要看的影片HITCON in DEFCON 22 CTF Final 紀錄片](https://www.youtube.com/watch?v=XcneHvq1hbY)
