--- a/0.md
+++ b/0.md
@@ -5,21 +5,23 @@
   - 一點點的Python程式開發與在資安的應用
 
 
-
-# 開場白
+## 開場白
 - 上課之前 一定要宣讀 [資安倫理宣言](資安宣言.gif)
 ![資安倫理宣言](資安宣言.gif)
 
 - 適合高中職學生學習資安的好去處[【高中職生資安研習營】 別忘了 按讚 給我們鼓勵](https://zh-tw.facebook.com/pages/category/Community/高中職生資安研習營-455550404836569/)
-## 上課所使用的平台
+
+# 上課所使用的平台
 - [[CTF 平台]](https://120.114.62.204)
 - [[Discord討論區]](https://discord.gg/V7mTpCP5gK)
   - 鼓勵同學互相討論 但切勿直接將解答分享給同學
   - 養成 榮譽心 是大家對你的深深期望 
+
+# 上課方式
 
 ## 後續研讀建議
 - 關注臉書活動公告|參與更多資安學習|持續強化你的資安戰鬥力
   - 每年暑假SUMMER CAMP 程式安全分析夏令營
   - 不定期舉辦的現代密碼破密分析課程 
   - 不定期舉辦的網站安全分析課程
-- 參加`年度台灣好厲駭高階資安人才培訓活動`(每年7-8月徵選)
+- 參加`年度台灣好厲駭高階資安人才培訓活動`(每年7-8月徵選,會公告到臉書,請密切注意)
