--- a/0.md
+++ b/0.md
@@ -1,8 +1,8 @@
 # 課程宗旨:
 - 讓全台灣的學生都有機會快速學到底下基本技術
-  - 一點點的資安與CTF技術
-  - 一點點的LINUX
-  - 一點點的Python程式開發與在資安的應用
+  - 一點點的資安與CTF技術 [3.1課程]
+  - 一點點的LINUX[3.2課程]
+  - 一點點的Python程式開發與在資安的應用[3.4-3.5課程]
 
 
 ## 開場白
