--- a/1/1.md
+++ b/1/1.md
@@ -19,9 +19,11 @@
 
 ## 起手式---word隱寫術
 
-## 台灣舉辦的世界級搶旗大賽Hitcon CTF
-
+## 台灣舉辦的世界級搶旗大賽 Hitcon CTF
+- [Hacks In Taiwan 台灣駭客年會(HITCON)](https://hitcon.org/)
+- [HITCON臉書](https://www.facebook.com/HITCON/)
 - [HITCON YOUTUBE頻道的影片](https://www.youtube.com/c/HacksInTaiwan/videos)
+- [HITCON ZeroDay漏洞通報平台](https://zeroday.hitcon.org/)
 
 ## 更多台灣舉辦的ctf(以字母順序陳列+請上網搜尋)  若有遺漏煩請告知! 謝謝
 - AIS3 CTF
